@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.3.0 (pending)
 ==========================
 
+- Fixes for missing title bar and menu bar on OSX
 - Cross platform styler for instances of QFormLayout
 - Graph editor tabs setDocumentMode() for OSX appearance
 - Ignore key press events from graph widgets with focus
